:bug: fix overflow caused by floating name

--- a/src/view/src/global.css
+++ b/src/view/src/global.css
@@ -20,6 +20,10 @@
   font-family: 'Nunito', sans-serif;
 }
 
+body {
+  overflow: hidden;
+}
+
 .hide-cursor {
   cursor: none !important;
 }
